<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">&appname;</string>
    <string name="logintext">Log In</string>
    <string name="login_txt">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome_to_appname">Welcome to &appname;</string>
    <string name="fb_button">Continue with Facebook</string>
    <string name="google_button">Continue with Google</string>
    <string name="email_button">Create Account</string>
    <string name="please_login_to_verify_your_email">Please Login to verify your Email.</string>
    <string name="terms_and_privacy" tools:ignore="MissingTranslation">By tapping Continue, Create Account or More options, I agree to &appname;\'s Terms of Service, Payments Terms of Service, Privacy Policy, and Non-Discrimination Policy.</string>
    <string name="confirm">Confirm %s</string>
    <string name="iban_number">IBAN Number</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="your_email">And, your email?</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="email_promotional">I\'d like to receive promotional communications, including discounts, surveys, inspiration, and love from &appname;
        via email, SMS, and phone</string>
    <string name="create_password">Create a password</string>
    <string name="password_condition_text">Your password must be 8 or more characters long. Do not use any common passwords, repetition or sequences. Try making it longer or adding symbols, like /!,/#,or /%</string>
    <string name="password">PASSWORD</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="when_birthday">When is your birthday?</string>
    <string name="age_limit">You must be at least 18 years old to use &appname;. Others won\'t see your birthday.</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgot_your_password">Forgot your \npassword?</string>
    <string name="enter_email">Enter your email to find your \naccount.</string>
    <string name="link_msg">A link to reset your password has been sent to %s</string>
    <string name="change_your_password">Reset Your Password</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="success_reset_msg">Password reset successfully. Please Login to continue</string>
    <string name="menu_1">EXPLORE</string>
    <string name="saved">SAVED</string>
    <string name="menu_2">TRIPS</string>
    <string name="menu_3">INBOX</string>
    <string name="menu_4">PROFILE</string>
    <string name="menu_5">LISTINGS</string>
    <string name="menu_6">CALENDAR</string>
    <string name="menu_7">PROGRESS</string>
    <string name="search_box">Try “Los Angeles”</string>
    <string name="dates">Dates</string>
    <string name="guestscount">%d Guests</string>
    <string name="filterscount">%d Filters</string>
    <string name="filter">Filter</string>
    <string name="filter_small"> filter</string>
    <string name="filters_small"> filters</string>
    <string name="listings_you_can_book_without_waiting_for_host_approval" tools:ignore="ExtraTranslation">Listings you can book without waiting for host approval.</string>
    <string name="instant_book">Instant Book</string>
    <string name="no_result">No Results</string>
    <string name="no_results_found">No results found</string>
    <string name="no_list_found">No Listing found</string>
    <string name="try_adjusting_your_search_here_are_some_ideas">  Try adjusting your search. Here are some ideas:</string>
    <string name="change_your_filters_or_dates">\u2022 Change your filters or dates</string>
    <string name="entire_house">Entire House</string>
    <string name="price_per_night">$245 per night</string>
    <string name="list_name">Contemporary Chalet - Lake Annecy</string>
    <string name="search_for_a_specific_city_address">\u2022 Search for a specific city, address</string>
    <string name="most_viewed">Most Viewed Listing</string>
    <string name="recommed_viewed">Recommended Listings</string>
    <string name="guest">Guest</string>
    <string name="guests">Guests</string>
    <string name="guest_small"> guest</string>
    <string name="guests_small"> guests</string>
    <string name="plus">%d+</string>
    <string name="see_results">See results</string>
    <string name="reset">Reset</string>
    <string name="where">Where to?</string>
    <string name="nearby">Nearby</string>
    <string name="clear">Clear</string>
    <string name="price_range">Price range</string>
    <string name="facilities">Facilities</string>
    <string name="amenities">Amenities</string>
    <string name="show_all_amenities">Show all amenities</string>
    <string name="close_all_amenities">Close all amenities</string>
    <string name="home_type">Home type</string>
    <string name="Rooms_and_beds">Rooms and beds</string>
    <string name="show_all_facilities">Show all facilities</string>
    <string name="close_all_facilities">Close all facilities</string>
    <string name="house_rules">House Rules</string>
    <string name="show_all_house_rules">Show all house rules</string>
    <string name="close_all_house_rules">Close all house rules</string>
    <string name="Facilities">Facilities</string>
    <string name="divider">/</string>
    <string name="phone">Phone Number</string>
    <string name="location_edit">Location</string>
    <string name="edit_about_me">Edit about me</string>
    <string name="email">Email</string>
    <string name="languages">Languages</string>
    <string name="preferred_language">Preferred language</string>
    <string name="email_info_edit">This is used for login and emails from &appname; and it not shared with other users.</string>
    <string name="edit_name">Edit Name</string>
    <string name="about_me">About me</string>
    <string name="private_details">Private Details</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="Error_msg">Sorry, we had trouble updating your %s at this time</string>
    <string name="logout">Logout</string>
    <string name="grant_camera_permission">Grant Permission to access your gallery and photos</string>
    <string name="why_host">Why Host?</string>
    <string name="terms_n_privacy">Terms and Privacy</string>
    <string name="about_us">About Us</string>
    <string name="trust_n_safetyt">Trust and Safety</string>
    <string name="version">Version</string>
    <string name="list_your_space">List Your Space</string>
    <string name="text_one">Become a host by list your space and earn more money</string>
    <string name="text_two">Choose your own price, availability, rules and much more</string>
    <string name="text_three">Manage your upcoming reservations easily</string>
    <string name="text_four">Monitor your payouts for each reservations in single screen</string>
    <string name="email_confirmed">Email Confirmed</string>
    <string name="document_verification">Document Verification</string>
    <string name="google_connected">Google Connected</string>
    <string name="facebook_connected">Facebook Connected</string>
    <string name="phone_verified">Phone Verified</string>
    <string name="verified">Verified</string>
    <string name="verify_phone">Verify Phone Number</string>
    <string name="about">About</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="connect_google">Connect Google</string>
    <string name="connect_fb">Connect Facebook</string>
    <string name="first_name_edit">First Name</string>
    <string name="last_name_edit">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="company_name">Company Name</string>
    <string name="account_type">Account type</string>
    <string name="account_type_error">Please choose account type</string>
    <string name="stripe_error">Connecting your bank account with the platform exception is failed</string>
    <string name="authtoken_desc">Your session has expired, and you have been logged out. Please log in again.</string>
    <string name="login">Log in</string>
    <string name="invalid_email">Invalid Email.</string>
    <string name="invalid_email_desc">Please check if your email has been entered correctly.</string>
    <string name="invalid_login_credentials">Invalid login credentials</string>
    <string name="show_password">Show Password</string>
    <string name="error">Error</string>
    <string name="currently_offline">You are currently offline</string>
    <string name="birthday_error">Birthday Error.</string>
    <string name="server_error">Server not respond please try again later!!</string>
    <string name="to_sign_up">To sign up, you must be 18 or older.</string>
    <string name="age_18_limit">You must be 18 or older.</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="password_error">Password Error</string>
    <string name="password_limit">Password limit must be more than 7 characters long</string>
    <string name="something_went_wrong">Something went wrong. Try again later</string>
    <string name="reset_password_error">Reset Password Error</string>
    <string name="reset_password_error_desc">Your request to reset password already expired.</string>
    <string name="something_went_wrong_action">Something went wrong with your request.</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_name_desc">Both Firstname and Lastname should not be empty</string>
    <string name="invalid_firstname_desc">First Name should not be empty</string>
    <string name="invalid_lastname_desc">Last Name should not be empty</string>
    <string name="invalid_phone">Invalid Phone Number.</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>
    <string name="uh_oh">Uh-oh!</string>
    <string name="we_can_t_seem_to_find_the_anything_that_you_re_looking_for">We can`t seem to find the anything that you`re looking for!</string>
    <string name="error_code_404">Error code: 404</string>
    <string name="explore_appname">Explore &appname;</string>
    <string name="dollar_currency">(BGN)</string>
    <string name="dollar_amount">$1234.23</string>
    <string name="add_photo_to_your_listing">Add photos to your listing</string>
    <string name="add_photo_sub_text">Photos help guests imagine staying in your place. You can start with one and add more after you publish.</string>
    <string name="total">Total</string>
    <string name="set_up_your_appname_payout_method">Set up your &appname; payout method</string>
    <string name="your_payout_is_what_you_earn_from_hosting_a_guest_payouts_are_sent_24_hours_after_each_check_in">Your payout is what you earn from hosting a guest. Payouts are sent 24 hours after each check-in.</string>
    <string name="learn_more_about_payouts">Learn more about payouts</string>
    <string name="start">Start</string>
    <string name="add_photo">Add Photos</string>
    <string name="you_don_t_have_any_listings">You don`t have any listings!</string>
    <string name="make_money_by_renting_out_your_extra_space_you_ll_also_get_to_meet_interesting_travelers_from_around_the_world">Make money by renting out your extra space. You`ll also get to meet interesting travelers from around the world!</string>
    <string name="post_a_new_listing">Post a new Listing</string>
</resources>