<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="rightSide"
            type="String" />
        <variable
            name="leftSide"
            type="String" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layoutDirection="locale">


        <TextView
            android:id="@+id/tv_listing_checkin_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/text_size_h2"
            android:textColor="@color/text_color"
            android:layout_alignParentStart="true"
            android:textDirection="locale"
            />

        <TextView
            android:id="@+id/tv_listing_checkin_placeholder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_currency"
            android:textSize="@dimen/text_size_h2"
            android:textColor="@color/colorPrimary"
            android:layout_toEndOf="@id/tv_listing_checkin_placeholder"
            android:layout_toStartOf="@id/tv_listing_checkin_time"
            android:visibility="gone"
            android:textDirection="locale"
            />

        <TextView
            android:id="@+id/tv_listing_checkin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_amount"
            android:textSize="@dimen/text_size_h2"
            android:layout_alignParentEnd="true"
            android:textColor="@color/text_color"
            android:textDirection="locale"
            />

    </RelativeLayout>

</layout>
