<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.rentall.radicalstart.ui.host.hostListing.HostListingViewModel"/>
    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layoutDirection="locale">

        <include
            android:id="@+id/action_bar"
            layout="@layout/toolbar_manage_list"
            style="@style/Toolbar" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_manage_list"
            android:layout_below="@id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/rv_manage_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
            </com.airbnb.epoxy.EpoxyRecyclerView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:id="@+id/rl_no_listing_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_don_t_have_any_listings"
                    android:textSize="20sp"
                    android:textColor="@color/text_color"
                    android:textDirection="locale"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_money_by_renting_out_your_extra_space_you_ll_also_get_to_meet_interesting_travelers_from_around_the_world"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textDirection="locale"
                    />

                <Button
                    android:id="@+id/post_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_a_new_listing"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="false"
                    android:elevation="5dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_404_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uh_oh"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_marginBottom="0dp"
                android:textDirection="locale"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp"
                android:text="@string/we_can_t_seem_to_find_the_anything_that_you_re_looking_for"
                android:textDirection="locale"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_code_404"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textDirection="locale"/>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lt_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_scale="0.5"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                app:lottie_rawRes="@raw/animation"
                />


    </RelativeLayout>

</layout>
