<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rentall.radicalstart.ui.base.BaseViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale">

        <FrameLayout
            android:id="@+id/fl_booking"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_auth_loading_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40000000"
            goneUnless="@{viewModel.isLoading}">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lt_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_scale="0.4"
                android:layout_gravity="center_vertical|center_horizontal"
                app:lottie_rawRes="@raw/loading_qwe"
                android:background="@drawable/lottie_background"
                />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/ll_404_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uh_oh"
                android:gravity="center"
                android:textDirection="locale"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_marginBottom="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:textDirection="locale"
                android:layout_marginTop="10dp"
                android:text="@string/we_can_t_seem_to_find_the_anything_that_you_re_looking_for"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_code_404"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textDirection="locale"/>

            <Button
                android:id="@+id/btn_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_appname"
                android:minWidth="40dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/curve_button_transparent"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</layout>
